# konspektai

./: .gitignore  README.md  Versions.md
.codex/environments/: environment.toml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py  schemas.py
backend/app/services/: __init__.py  answering.py  audio.py  broadcaster.py  classifier.py  health.py  materials.py  pipeline.py
backend/konspektai_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_api.py  test_audio.py  test_classifier.py  test_materials.py  test_pipeline.py
data/: konspektai.db
data/exports/: session_8_anki.csv  session_8_notes.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/api/: backend.ts  websocket.ts
frontend/src/components/: AIAnswerPanel.tsx  AudioChunkPanel.tsx  DesktopStatusPanel.tsx  EventLog.tsx  MaterialsPanel.tsx  NotesPanel.tsx  QuickInsertPanel.tsx  SessionControls.tsx  SubtitleOverlay.tsx  TextIngestBox.tsx
frontend/src/lib/: audio.ts  desktop.ts  notes.ts  sessionStorage.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
