[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "konspektai-backend"
version = "0.1.0"
description = "Backend MVP for local-first Study Copilot"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
runtime = [
  "faster-whisper>=1.0,<2.0",
]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-timeout>=2.4,<3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 60
timeout_method = "thread"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]
